# Montador

./: .gitignore  CMakeLists.txt  README.md  steps_to_run.txt
include/trabalho1/: Montador.hpp  Preprocess.hpp
src/: Montador.cpp  Preprocess.cpp  main.cpp  montador.cpp  simulador.cpp  utils.cpp
